cmake_minimum_required (VERSION 3.5)
project (iib-stats-writer-gettingstarted CXX)

if (NOT IS_DIRECTORY ${IIB_INSTALL_DIR})
  message (FATAL_ERROR "You must set the IIB_INSTALL_DIR variable!")
endif ()
set (IIB_INCLUDES_DIR ${IIB_INSTALL_DIR}/server/include/plugin)
if (NOT IS_DIRECTORY ${IIB_INCLUDES_DIR})
  message (FATAL_ERROR "The directory ${IIB_INCLUDES_DIR} does not exist!")
endif ()
set (IIB_LIBRARIES_DIR ${IIB_INSTALL_DIR}/server/lib)
if (NOT IS_DIRECTORY ${IIB_LIBRARIES_DIR})
  message (FATAL_ERROR "The directory ${IIB_LIBRARIES_DIR} does not exist!")
endif ()
add_definitions (-DBIP_CXX11_SUPPORT=1)
include_directories (${IIB_INCLUDES_DIR})
find_library (IMBDFPLG NAMES imbdfplg PATHS ${IIB_LIBRARIES_DIR})

add_library (gettingstartedsw SHARED GettingStartedStatsWriter.cpp GettingStartedStatsWriter.hpp)
target_link_libraries (gettingstartedsw ${IMBDFPLG})
set_target_properties (gettingstartedsw PROPERTIES PREFIX "" SUFFIX ".lil" CXX_STANDARD 11)
